# uniAI

./: .env.example  Dockerfile  README.md  pyproject.toml
deploy/: docker-compose.yml
docs/: ARCHITECTURE_TR.md  CLAUDE_MCP_SETUP_TR.md  CODE_WALKTHROUGH_TR.md
rbac_rag_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: demo.py  ingest.py  migrate_add_user_id.py  setup_db.py
src/: config.py
src/db/: manager.py  schema.sql  seed.sql
src/llm/: base.py  claude_provider.py  factory.py  local_provider.py  ollama_provider.py
src/mcp/: server.py
src/models/: enums.py  exceptions.py  results.py  user.py
src/rag/: chunker.py  pipeline.py  vector_store.py
src/rbac/: auth.py  engine.py
src/router/: classifier.py  context_builder.py  llm_router.py
src/text/: __init__.py  normalization.py
src/web/: __init__.py  app.py
tests/: test_auth.py  test_integration.py  test_llm_router.py  test_rag.py  test_rbac.py  test_router.py  test_server.py  test_text_normalization.py
